# virtual-contributor-engine

./: .gitignore  CLAUDE.md  CODEOWNERS  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: setup-plan.sh
alkemio_virtual_contributor_engine/: __init__.py  alkemio_vc_engine.py  chromadb_client.py  chromadb_utils.py  config.py  models.py  rabbitmq.py  setup_logger.py  utils.py
alkemio_virtual_contributor_engine/events/: __init__.py  base.py  ingest_website.py  ingest_website_result.py  input.py  response.py
alkemio_virtual_contributor_engine/prompt_graph/: __init__.py  edge.py  json_graph_parser.py  node.py  prompt_graph.py  state.py
specs/001-mistral-prompt-graph-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mistral-prompt-graph-migration/checklists/: requirements.md
specs/002-tests-ci-claude-md/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-tests-ci-claude-md/checklists/: requirements.md
tests/: conftest.py  test_alkemio_vc_engine.py  test_chromadb_client.py  test_chromadb_utils.py  test_config.py  test_models.py  test_rabbitmq.py  test_setup_logger.py  test_utils.py
tests/events/: test_base.py  test_ingest.py  test_input.py  test_response.py
tests/prompt_graph/: test_edge.py  test_json_graph_parser.py  test_node.py  test_prompt_graph.py  test_state.py
