[tool.poetry]
name = "alkemio-virtual-contributor-engine"
version = "0.5.0"
description = "Alkemio's generic Virtual Contributor engine"
authors = ["Vladimir Aleksiev <vladimir@alkem.io>"]
readme = "README.md"
license = "EUPL"
packages = [{include = "alkemio_virtual_contributor_engine"}]


[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "9.5.7"
aiormq = "6.9.0"
load-dotenv = "^0.1.0"
chromadb-client = "0.6.2"
bcrypt = "^5.0.0"

pydantic-settings = "^2.11.0"
langchain = "^1.1.0"
langchain-openai = "^1.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pyright = "^1.1.406"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

