[tool.poetry]
name = "alkemio-virtual-contributor-engine"
version = "0.8.0"
description = "Alkemio's generic Virtual Contributor engine"
authors = ["Vladimir Aleksiev <vladimir@alkem.io>"]
readme = "README.md"
license = "EUPL"
packages = [{include = "alkemio_virtual_contributor_engine"}]


[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "9.5.7"
aiormq = "6.9.0"
load-dotenv = "^0.1.0"
chromadb-client = "^1.5.0"
bcrypt = "^5.0.0"

pydantic-settings = "^2.11.0"
langchain = "^1.1.0"
langchain-openai = "^1.1.0"
langchain-mistralai = "^1.1.0"
langgraph = "^1.0.4"
json-schema-to-pydantic = "^0.4.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pyright = "^1.1.406"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

